deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: voluntariadoips-service
  namespace: voluntariadoips-dev
spec:
  type: NodePort
  selector:
    name: voluntariadoips
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
